feat: implement secure password recovery [REC-409]
